<resources>
    <string name="app_name">Semiaberto</string>
    <string name="action_settings">Settings</string>
    <string name="titulo_marcacoes">Marcações</string>
    <string name="adicionar_marcacao">Adicionar</string>
    <string name="saioas_text">00:00</string>
    <string name="banner_ad_unit_id">ca-app-pub-4515946588749336/4290844607</string>
    <string name="horario_text_view">Horário</string>
    <string name="jornada_text_view">Jornada</string>
    <string name="atraso_text">atraso</string>
    <string name="debito_text">débito</string>
    <string name="opcoes_text_view">Opções</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
