<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.liberdad.semiaberto.Main2Activity"
    tools:showIn="@layout/activity_main2">

    <!-- abrindo o topo -->
        <RelativeLayout
            android:id="@+id/topoLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/gray_800"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@color/gray_800"
                android:orientation="vertical"
                android:paddingLeft="10dp">

                <TextView
                    android:id="@+id/atrasoTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/atraso_text"
                    android:textColor="@color/gray_white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/debitoTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/debito_text"
                    android:textColor="@color/gray_white"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/saioAsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/saioas_text"
                android:textColor="@color/teal_200"
                android:textSize="@dimen/saioas_text_view" />

        </RelativeLayout>
        <!-- fechando o topo -->


        <!-- abrindo a parte central -->
        <LinearLayout
            android:id="@+id/meioLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="horizontal">

            <!-- abrindo o painel esquerdo -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#EEEEEE"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/green_finep"
                    android:gravity="center_horizontal"
                    android:text="@string/opcoes_text_view"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/contratoSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:text="6h?"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tempoTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="00:00"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <!-- abrindo seekbar -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/menosButton"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:onClick="decrementarSeekBar"
                        android:text="-" />

                    <!-- abrindo o seekbar -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                        android:orientation="vertical">

                        <SeekBar
                            android:id="@+id/bancoHorasSeekBar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <!-- abrindo o label das 8 -->
                        <LinearLayout
                            android:id="@+id/oitoLinearLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:visibility="visible">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_horizontal"
                                android:text="5" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_horizontal"
                                android:text="" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_horizontal"
                                android:text="" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_horizontal"
                                android:text="8" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_horizontal"
                                android:text="" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_horizontal"
                                android:text="10" />
                        </LinearLayout>
                        <!-- fechando o label das 8 -->

                        <!-- abrindo o label das 6 -->
                        <LinearLayout
                            android:id="@+id/seisLinearLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:visibility="gone">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_horizontal"
                                android:text="4" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_horizontal"
                                android:text="" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_horizontal"
                                android:text="6" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_horizontal"
                                android:text="" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_horizontal"
                                android:text="8" />

                        </LinearLayout>
                        <!-- fechando o label das 6 -->

                    </LinearLayout>
                    <!-- fechando o seekbar -->

                    <Button
                        android:id="@+id/maisButton"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:onClick="incrementarSeekBar"
                        android:text="+" />

                </LinearLayout>
                <!-- fechando seekbar -->

            </LinearLayout>
            <!-- fechando o painel esquerdo -->

            <!-- abrindo o painel direito -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/green_finep"
                        android:gravity="center_horizontal"
                        android:text="@string/titulo_marcacoes"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ListView
                        android:id="@+id/marcacoesListView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/fab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|end"
                        android:layout_margin="@dimen/fab_margin"
                        android:onClick="adicionarMarcacao"
                        app:srcCompat="@android:drawable/ic_dialog_email" />

                </LinearLayout>

            </LinearLayout>
            <!-- fechando o painel direito -->

        </LinearLayout>
        <!-- fechando a parte central -->


</LinearLayout>
